--- a/gb/18/5/20/n10410488.md
+++ b/gb/18/5/20/n10410488.md
@@ -1,66 +1,66 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>桃园特殊教育获中央评鉴优等</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/05/8109a85a9c893a114696c9abd63ef26e-600x394.jpg" />
 <h6>桃园教育局补助学校办理国民小学课后照顾身心障碍学生专班。（桃园教育局提供）
 </h6>
 <hr>
-<p>【大纪元2018年05月20日讯】（大纪元记者陈建霖台湾桃园报导）教育部对地方政府<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>行政绩效评鉴成绩出炉，桃园市特殊教育获中央评鉴为优等，并获奖金新台币100万元，全国仅3个县市获此荣耀。桃园市近10年在教育部全国特教评鉴中，连续10年都得最佳成绩。</p>
-<p>桃园市在鉴定安置、课程教学及支援与转衔等面向得到肯定，足见桃园市<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E6%95%99%E8%82%B2.md#1">特殊教育</a>落实在每个环节，从筛选鉴定、安置合适班级、提供适性教育都非常完整落实，学校老师为每位特殊学生召开个别教育计划(IEP)会议，与任课教师、家长、特教助理员及专业团队人员，讨论学生所需要的课程安排及支持服务。且在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BA%AB%E5%BF%83%E9%9A%9C%E7%A2%8D%E5%AD%A6%E7%94%9F.md#1">身心障碍学生</a>所需支持性服务上，投注大量心力，包括学习辅具借用、专业心理师、治疗师咨询服务、特教助理员及交通服务等。尤其是本市特殊教师教师专业发展、教学研究及教学辅导方面，也是特教行政及教师们历年努力札根的甜美果实。</p>
+<p>【大纪元2018年05月20日讯】（大纪元记者陈建霖台湾桃园报导）教育部对地方政府特殊教育行政绩效评鉴成绩出炉，桃园市特殊教育获中央评鉴为优等，并获奖金新台币100万元，全国仅3个县市获此荣耀。桃园市近10年在教育部全国特教评鉴中，连续10年都得最佳成绩。</p>
+<p>桃园市在鉴定安置、课程教学及支援与转衔等面向得到肯定，足见桃园市特殊教育落实在每个环节，从筛选鉴定、安置合适班级、提供适性教育都非常完整落实，学校老师为每位特殊学生召开个别教育计划(IEP)会议，与任课教师、家长、特教助理员及专业团队人员，讨论学生所需要的课程安排及支持服务。且在身心障碍学生所需支持性服务上，投注大量心力，包括学习辅具借用、专业心理师、治疗师咨询服务、特教助理员及交通服务等。尤其是本市特殊教师教师专业发展、教学研究及教学辅导方面，也是特教行政及教师们历年努力札根的甜美果实。</p>
 <p>&nbsp;</p>
-<p>在行政组织及经费编列方面，桃园市表现亮眼，桃园市于特殊教育为提供<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BA%AB%E5%BF%83%E9%9A%9C%E7%A2%8D%E5%AD%A6%E7%94%9F.md#1">身心障碍学生</a>上学交通服务，除15所国中小拥有交通车，负责该区域学生上下学交通以外，本局每年以劳务采购方式租赁交通车每年租车经费达3672万元。</p>
+<p>在行政组织及经费编列方面，桃园市表现亮眼，桃园市于特殊教育为提供身心障碍学生上学交通服务，除15所国中小拥有交通车，负责该区域学生上下学交通以外，本局每年以劳务采购方式租赁交通车每年租车经费达3672万元。</p>
 <p>桃园市提供身心障碍学生就学交通车服务，106学年度租赁42辆，服务53校共350位学生，支应经费计新台币3,672万710元整，交通车不仅提高身心障碍学生到校出席率，亦减轻身心障碍学生家长接送上下学负担。</p>
-<figure id="10410491" aria-describedby="caption-10410491" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/05/0c816107eaaf4ec5b5cfda297bc82792-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2018/05/0c816107eaaf4ec5b5cfda297bc82792-450x338.jpg" alt="桃园市办理身障学生暑期课后照顾专班，开办学校计24校。" width="500" /></a><figcaption id="caption-10410491" class="wp-caption-text">桃园市办理身障学生暑期课后照顾专班，开办学校计24校。（桃园教育局提供）</figcaption></figure>
+<figure id="10410491" aria-describedby="caption-10410491" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2018/05/0c816107eaaf4ec5b5cfda297bc82792-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" src="https://i.epochtimes.com/assets/uploads/2018/05/0c816107eaaf4ec5b5cfda297bc82792-450x338.jpg" alt="桃园市办理身障学生暑期课后照顾专班，开办学校计24校。" width="500" /></a><figcaption id="caption-10410491" class="wp-caption-text">桃园市办理身障学生暑期课后照顾专班，开办学校计24校。（桃园教育局提供）</figcaption></figure>
 <p>桃园教育局补助学校办理国民小学课后照顾身心障碍学生专班，106年度办理学校计48校，参与学生计662名，补助经费新台币1,217万2,497元。另于106年7至8月间办理身障学生暑期课后照顾专班，开办学校计24校，参与学生计267名，补助经费新台币206万元。107年度学校也都积极开班，已有57校开办91班，参与学生计778名。</p>
 <p>桃园市身心障碍特教班104至106年共增设46班，达成国中阶段100%设班，国小24班以上规模学校100%设班，补助学校进用279名特教助理员，照顾学生校园生活及训练自理能力。</p>
 <p>责任编辑：王愉悦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/2/n10270386.md#1">2018桃园农博水利馆揭牌  呈现桃园特有水文化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/20/n10321122.md#1">不一样的行李箱 让世界看到身心障碍者天赋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/25/n10334918.md#1">链接在地艺文好伴 故宫身心障碍教育活动抵嘉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032933.md#1">分科测验首日 试题取材生活化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032325.md#1">校园霸凌攀升 每年破千件</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028771.md#1">招揽侨外生 台教部拟推新型态产学专班</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028763.md#1">每日3蔬、2果  台仅7%国小生达标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028765.md#1">北市高中职拟减招 教育局：讨论中</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028093.md#1">拒绝暴力 家长压力大可适时求助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/4/n14028097.md#1">青少年吸烟抒压 吸毒概率增25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/3/22/n4393733.md#1">折翼天使挑战单车环台 首站桃园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/3/24/n4395274.md#1">折翼天使铁马环岛  为波丽士传爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/3/31/n4400924.md#1">折翼天使勇闯台9线  赞台东好山好水</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/7/n4452479.md#1">折翼天使美展  港艺中心精彩展出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/8/16/n4505381.md#1">让折翼天使更有尊严 启智协会更名揭牌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/11/n7541008.md#1">折翼天使需要家 中市招募寄养家庭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/16/n8599024.md#1">关怀折翼天使  竹市企业共度佳节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322230.md#1">北检三大缺失斲伤公信 凌涛：司法机器谁来制衡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322219.md#1">舞力全开 2024“元智杯”热舞大赛</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/2/n14322205.md#1">智慧制造CxO高阶共识交流论坛 迎战国际智慧浪潮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/2/n10270386.md#1">2018桃园农博水利馆揭牌  呈现桃园特有水文化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/20/n10321122.md#1">不一样的行李箱 让世界看到身心障碍者天赋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/25/n10334918.md#1">链接在地艺文好伴 故宫身心障碍教育活动抵嘉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345061.md#1">台师大与商圈合作开学季 国际生热情参与</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343411.md#1">台风假影响段考进度 全教总：采取变通权宜措施</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343050.md#1">学术研究如何连接台湾与世界 专家座谈分析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342767.md#1">将时事融入阅读 国中办战争避难体验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342100.md#1">教师聊罢免遭检举 全教总：侵公民权</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340604.md#1">抢救中药行 卫福部研议放宽2类毕业生接班条件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/29/n14340594.md#1">唐奖永续发展奖得主：有开始勇气就能成就非凡</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/26/n9993508.md#1" target="_blank">爱德华：中共从道德上彻底摧毁中国人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/4/n10023623.md#1" target="_blank">车祸后30年行走困难 读《转法轮》4个月“开跑”</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/17/n11801155.md#1" target="_blank">澳洲参议员：法轮功为中国所有良心犯争人权</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018167.md#1">【杨延昭传奇】马刨泉的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/7/n14030138.md#1">浪淘沙?云鹏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/27/n13982578.md#1">【医案】烧眉之急</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/5/n14028691.md#1">受用的智语：纸纸家书只说墙 让他径寸有何妨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030610.md#1">青玉案?万古机缘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033205.md#1">【菁英论坛】苏州讲话遭恶搞 习最大恐惧在哪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033482.md#1">【全球新闻】北约最强联合公报 15次点名中共</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14033132.md#1">【热点互动】北约东扩 普京拟访华 印太成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14031982.md#1">爱尔兰男子称目击尼斯湖水怪 公布画面为证</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032026.md#1">富士康退出195亿美元印度芯片厂计划</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031857.md#1">Threads用户五天突破一亿 增速超过ChatGPT</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032443.md#1">梁朝伟与刘德华同框 两人表情迥异引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032730.md#1">瑞莎领队赴欧扫19金 台小将披国旗登台28次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032055.md#1">《不可能7》造真实火车只为摧毁 台湾票房亮眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031504.md#1">魏德圣新片拍癌童家庭 田中千绘范逸臣再合演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032264.md#1">TWICE美国巡演结束 成员们深夜向工作人员致谢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031486.md#1">为了快乐 让自己像老年人一样思考</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/17/n14017966.md#1">口腔问题影响全身健康？专家告诉你答案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/11/n14032025.md#1">夏季危机 溺水成美国幼儿头号杀手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031649.md#1">美食博主摆盘懒人包 在家就能轻松作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031806.md#1">2023卡尔加里牛仔节：煎饼与政客</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14342225.md#1">《对我而言，你是珍贵的》：家之所以为家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345934.md#1">【新闻欣视角】北京政局或失控 美国预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345929.md#1">【时事金扫描】针对中共 美军两大台海密战计划</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345864.md#1">【新闻大破解】十月惊奇在中东 以色列打台湾牌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/5/n14344745.md#1">女星李一桐搭机光脚蹭座垫 视频曝光引争议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/20/n10410488.htm">桃园特殊教育获中央评鉴优等</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/18/5/20/n10410488.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/5/20/n10410488.htm">桃园特殊教育获中央评鉴优等</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/18/5/20/n10410488.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
